resources/ext.wp25EasterEggs/style.css
.wp25eastereggs-sitenotice-landmark,
.wp25eastereggs-vector-sitenotice-landmark,
.wp25eastereggs-video-container {
	display: none;
}

/* Sitenotice landmark (applied to minerva and vector in md breakpoint) */

html.wp25eastereggs-companion-enabled.wp25eastereggs-enable-clientpref-1 .skin-minerva .wp25eastereggs-sitenotice-landmark {
	display: block;
	width: 12.25rem;
	height: 12.25rem;
	margin: 0 auto;
}

@media screen and ( max-width: 1119px ) {
	html.wp25eastereggs-companion-enabled.wp25eastereggs-enable-clientpref-1 .skin-vector-2022 .wp25eastereggs-sitenotice-landmark {
		display: block;
		width: 12.25rem;
		height: 12.25rem;
		margin: 0 auto;
	}
}

/* Column-end landmark (applied to vector) */

@media screen and ( min-width: 1120px ) {
	html.wp25eastereggs-companion-enabled.wp25eastereggs-enable-clientpref-1 .wp25eastereggs-vector-sitenotice-landmark {
		display: block;
		width: 12.25rem;
		height: 12.25rem;
	}
}

@media screen and ( min-width: 1680px ) {
	html.wp25eastereggs-companion-enabled.wp25eastereggs-enable-clientpref-1 .wp25eastereggs-vector-sitenotice-landmark {
		display: block;
		width: 15.5rem;
		height: 15.5rem;
	}
}

/* Video container */

html.wp25eastereggs-companion-enabled.wp25eastereggs-enable-clientpref-1 .wp25eastereggs-video-container {
	display: block;
	width: 100%;
	height: 100%;
	position: relative;
}

/* Add a gap between bodyContent and companion for the case the sidebar is hidden */

@media screen and ( min-width: 1120px ) {
	html.wp25eastereggs-companion-enabled .mw-body {
		column-gap: 24px;
	}
}

